# auth

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
db/: ddl.sql
src/: logger.py  main.py
src/api/v1/: auth.py
src/core/: config.py  database.py  mouse_mover.py  security.py
src/models/: user.py
src/services/: auth_service.py
